--- a/t/index.html
+++ b/t/index.html
@@ -11,7 +11,7 @@ max-width: 100%;
 <script>
 var ua = navigator.userAgent;
 var fwVersion = ua.substring(ua.indexOf("5.0 (") + 19, ua.indexOf(") Apple"));
-window.location.href = 'https://nikolaevich23.github.io/alt/' + fwVersion + '/index.html';
+window.location.href = 'https://nikolaevich23.github.io/t/' + fwVersion + '/index.html';
 </script>
 </head>
 <noscript>
