--- a/t/4.89/index.html
+++ b/t/4.89/index.html
@@ -1,6 +1,7 @@
-<title>Auto Hen Install</title>
+<title>Auto HEN 4.89</title>
 <center>
-<h1><span style='color:blue'>Auto HEN Installer for HFW 4.89</span></h1>
+<h1><span style='color:blue'>Auto HEN Installer for HFW 4.89 (Thanks to @lmn7)</span></h1>
+<p>
 <hr>
 <div id="result"></div>
 <div id="exploit"></div>
