--- a/t/index.html
+++ b/t/index.html
@@ -1,6 +1,6 @@
 <title>HEN Installer</title>
 <center>
-<h1><span style='color:blue'>HEN Installer / Установщик HEN</span></h1>
+<h1><span style='color:blue'>Auto HEN Installer</span></h1>
 <hr>
 <div id="result"></div>
 <div id="exploit"></div>
