--- a/311/index.html
+++ b/311/index.html
@@ -794,30 +794,6 @@ text-align: center;
 </div>
 </div>
 </div>
-<div class="comments" id="comments">
-<a name="comments"></a>
-<h4>
-0
-comentários:
-        
-</h4>
-<div class="pid-594581106" id="Blog1_comments-block-wrapper">
-<dl class="avatar-comment-indent" id="comments-block">
-</dl>
-</div>
-<p class="comment-footer">
-</p><div class="comment-form">
-<a name="comment-form"></a>
-<h4 id="comment-post-message">Postar um comentário</h4>
-<p>
-</p>
-<a href="https://www.blogger.com/comment/frame/5029048051402955480?pa=1621663135761556446&amp;hl=pt-BR&amp;blogspotRpcToken=746604" id="comment-editor-src"></a>
-<iframe allowtransparency="true" class="blogger-iframe-colorize blogger-comment-from-post" frameborder="0" height="98px" id="comment-editor" name="comment-editor" src="./byze_ HEN TRAVANDO 4.90_files/5029048051402955480.html" width="100%" data-resized="true"></iframe>
-<!--Can't find substitution for tag [post.friendConnectJs]-->
-<script src="./byze_ HEN TRAVANDO 4.90_files/976584016-comment_from_post_iframe.js.Без названия" type="text/javascript"></script>
-<script type="text/javascript">
-      BLOG_CMT_createIframe('https://www.blogger.com/rpc_relay.html', '0');
-    </script>
 </div>
 <p></p>
 <div id="backlinks-container">
@@ -825,27 +801,6 @@ comentários:
 </div>
 </div>
 </div>
-</div>
-<!--Can't find substitution for tag [defaultAdEnd]-->
-<div class="inline-ad">
-</div>
-<!--Can't find substitution for tag [adStart]-->
-
-      </div></div>
-    
-<!--Can't find substitution for tag [adEnd]-->
-</div>
-<div class="blog-pager" id="blog-pager">
-<a class="home-link" href="https://zmod1.blogspot.com/">Página inicial</a>
-</div>
-<div class="clear"></div>
-<div class="blog-feeds">
-<div class="feed-links">
-Assinar:
-<a class="feed-link" href="https://zmod1.blogspot.com/feeds/posts/default" target="_blank" type="application/atom+xml">Postagens (Atom)</a>
-</div>
-</div>
-</div></div>
 </div>
 <div id="sidebar-wrapper">
 <div class="sidebar no-items section" id="sidebar"></div>
@@ -878,5 +833,4 @@ _WidgetManager._SetDataContext([{'name': 'blog', 'data': {'blogId': '50290480514
 _WidgetManager._RegisterWidget('_HeaderView', new _WidgetInfo('Header1', 'header', document.getElementById('Header1'), {}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_BlogView', new _WidgetInfo('Blog1', 'main', document.getElementById('Blog1'), {'cmtInteractionsEnabled': false, 'lightboxEnabled': true, 'lightboxModuleUrl': 'https://www.blogger.com/static/v1/jsbin/3232662962-lbx__pt_br.js', 'lightboxCssUrl': 'https://www.blogger.com/static/v1/v-css/77523928-lightbox_bundle.css'}, 'displayModeFull'));
 </script>
-
-<div id="cookieChoiceInfo" class="cookie-choices-info singleton-element"><div class="cookie-choices-inner"><span class="cookie-choices-text">Этот сайт использует файлы cookie Google. Это необходимо для его нормальной работы и анализа трафика. Информация о вашем IP-адресе и агенте пользователя, а также показатели производительности и безопасности передаются в Google. Это помогает обеспечивать качество услуг, накапливать статистику использования, а также выявлять и устранять нарушения.</span><span class="cookie-choices-buttons"><a href="https://www.blogger.com/go/blogspot-cookies" target="_blank" class="cookie-choices-button">Подробнее</a><a id="cookieChoiceDismiss" href="https://zmod1.blogspot.com/p/hen-travando-490.html#" class="cookie-choices-button">ОК</a></span></div></div></body></html>
+</body></html>
