--- a/325/index.html
+++ b/325/index.html
@@ -27,8 +27,30 @@
 	</tr>
 	</tbody>
 </table>
+<br>
+<br>
+<p><span style="color: red; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">Требования:</span></p>
+<br>
+<table align="center" border="1" cellpadding="10" cellspacing="3">
+	<tbody>
+	<tr style="color: #333; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">
+		<td><span style="color: red;">01</span></td>
+		<td><a style="color: #58a; text-decoration-line: none;"><span style="color: #274e13;">Javascript должен быть включен</span></a></td>
+	</tr>
 
-	<h3>javascript должны быть включены, подтверждение закрытия браузера - выключено</h3>
+	<tr style="color: #333; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">
+		<td><span style="color: red;">02</span></td>
+		<td><a style="color: #58a; text-decoration-line: none;"><span style="color: #274e13;">Закрытия браузера - выключено</span></a></td>
+	</tr>
 
-	<p><span style="color: red; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">Подключите геймпад (ds3) по проводу</span></p>
+	<tr style="color: #333; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">
+		<td><span style="color: red;">03</span></td>
+		<td><a  style="color: #58a; text-decoration-line: none;">Перед установкой удалите webman</a></span></td>
+	</tr>
+	<tr style="color: #333; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">
+		<td><span style="color: red;">04</span></td>
+		<td><a  style="color: #58a; text-decoration-line: none;">Подключите геймпад (ds3) по проводу</a></span></td>
+	</tr>
+	</tbody>
+</table>
 </center>
