--- a/t/index.html
+++ b/t/index.html
@@ -1,19 +1,50 @@
-<title>HEN for 4.90 by ZMOD</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-table, th, td {
-  border: 1px solid;
-}
-</style>
+<title>HEN для 4.90.2</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+
 <center>
-  <h1><span style='color:red'>HEN for 4.90 от ZMOD (Unofficial)</span></h1>
-  <h2></h2>
-  <h2>Нужна установленная HFW 4.90.2:</h2>
-  <p><a href="https://drive.google.com/uc?export=download&confirm=no_antivirus&id=1AFdCo_bDiIW-tAfBG3ATT8SofXMg5ynV" style="color: #cc6600;"><span style="font-size: large;">HFW 4.90 download</span></a></p>
-  <h2>Жмите последовательно по ссылкам:</h2>  
- <p>&nbsp;</b></span></p><p style="background-color: white; color: #333333; font-family: Georgia, serif;"><span style="font-size: x-large;"><br></span></p><p style="background-color: white; color: #333333; font-family: Georgia, serif;"><b><span style="font-size: x-large;"><span style="color: red;">01</span>-<a href="BYZMOD.p3t" style="color: #5588aa; text-decoration-line: none;"><span style="color: #274e13;">PS3HEN</span>.p3t.&nbsp;</a></span></b></p><p style="background-color: white; color: #333333; font-family: Georgia, serif;"><span style="font-size: x-large;"><b>&nbsp;</b></span></p><p style="background-color: white; color: #333333; font-family: Georgia, serif;"><span style="font-size: x-large;"><b><span style="color: red;">02</span>-<a href="ZMOD.p3t" style="color: #5588aa; text-decoration-line: none;"><span style="color: #38761d;">HEN.</span>p3t.</a>&nbsp;</b></span></p><p style="background-color: white; color: #333333; font-family: Georgia, serif;"><span style="font-size: x-large;"><br></span></p><p style="background-color: white; color: #333333; font-family: Georgia, serif;"><b><span style="font-size: x-large;"><span style="color: red;">03</span>-<a href="HEN_490.html" style="color: #5588aa; text-decoration-line: none;">HEN INSTALL</a></span></b></p>
+	<h1><span style='color:red'>HEN for 4.90.2</span></h1>
+	<h2>Требуется установленная HFW 4.90.2:</h2>
+  
+	<p><a href="https://drive.google.com/uc?export=download&confirm=no_antivirus&id=1AFdCo_bDiIW-tAfBG3ATT8SofXMg5ynV" style="color: #c60;"><span style="font-size: x-large; font-weight: bold;">HFW 4.90 download</span></a></p>
+	<h2>Жмите последовательно по ссылкам:</h2>  
  
- <h3>javascript должны быть включены, подтверждение закрытия браузера - выключено</h3>
- <p style="background-color: white; color: #333333; font-family: Georgia, serif;"><span style="font-size: x-large;"><br></span></p><p style="background-color: white; color: #333333; font-family: Georgia, serif;"><b><span style="font-size: x-large;"><span style="color: red;">Подключите геймпад (ds3) по проводу</span></p>
+<table align="center" border="1" cellpadding="10" cellspacing="3">
+	<tbody>
+	<tr style="color: #333; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">
+		<td><span style="color: red;">01</span></td>
+		<td><a href="BYZMOD.p3t" style="color: #58a; text-decoration-line: none;"><span style="color: #274e13;">PS3HEN</span>.p3t</a></td>
+	</tr>
+	<tr style="color: #333; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">
+		<td><span style="color: red;">02</span></td>
+		<td><a href="ZMOD.p3t" style="color: #58a; text-decoration-line: none;"><span style="color: #38761d;">HEN</span>.p3t</a></td>
+	</tr>
+	<tr style="color: #333; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">
+		<td><span style="color: red;">03</span></td>
+		<td><a href="HEN_490.html" style="color: #58a; text-decoration-line: none;">HEN INSTALL</a></span></td>
+	</tr>
+	</tbody>
+</table>
+<br />
+<br />
+<p><span style="color: red; font-family: Georgia, serif; font-size: x-large; font-weight: bold;">Требования:</span></p>
+<table align="center" border="1" cellpadding="5" cellspacing="3" bgcolor="#f8f8f8">
+	<tbody>
+	<tr style="color: #333; font-family: Georgia, serif; font-weight: bold;">
+		<td><span style="color: red;">A</span></td>
+		<td><a style="color: #274e13; text-decoration-line: none;">Javascript должен быть включен</a></td>
+	</tr>
+	<tr style="color: #333; font-family: Georgia, serif; font-weight: bold;">
+		<td><span style="color: red;">B</span></td>
+		<td><a style="color: #274e13; text-decoration-line: none;">Закрытие браузера - выключено</a></td>
+	</tr>
+	<tr style="color: #333; font-family: Georgia, serif; font-weight: bold;">
+		<td><span style="color: red;">C</span></td>
+		<td><a style="color: #274e13; text-decoration-line: none;">Перед установкой удалите webman</a></span></td>
+	</tr>
+	<tr style="color: #333; font-family: Georgia, serif; font-weight: bold;">
+		<td><span style="color: red;">D</span></td>
+		<td><a style="color: #274e13; text-decoration-line: none;">Подключите геймпад (ds3) по проводу</a></span></td>
+	</tr>
+	</tbody>
+</table>
 </center>
