--- a/wm/index.html
+++ b/wm/index.html
@@ -7,7 +7,7 @@
 <script>
 function downloadhen()
 {
-	window.location.href = 'https://nikolaevich23.github.io/alt/' + fwVersion + '/PS3HENWM.p3t';
+	window.location.href = 'https://nikolaevich23.github.io/wm/' + fwVersion + '/PS3HEN.p3t';
 }
 
 function initROP(init)
