--- a/t/index.html
+++ b/t/index.html
@@ -142,7 +142,7 @@ function triggerX()
 	<script>
 		writeEnvInfo();
 		ps3chk();
-		initROP(true);
+		setTimeout(trigger,3000,initROP(true));
 		autoclose();
 	</script>
 	</body>
