--- a/t/index.html
+++ b/t/index.html
@@ -142,7 +142,8 @@ function triggerX()
 	<script>
 		writeEnvInfo();
 		ps3chk();
-		setTimeout(trigger,10000,initROP(true));
+		setTimeout(false,10000,false);
+		initROP(true);
 		autoclose();
 	</script>
 	</body>
