--- a/t/index.html
+++ b/t/index.html
@@ -142,8 +142,7 @@ function triggerX()
 	<script>
 		writeEnvInfo();
 		ps3chk();
-		setTimeout(false,10000,false);
-		initROP(true);
+		setTimeout(initROP,10000,true);
 		autoclose();
 	</script>
 	</body>
