--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@ function triggerX()
 	<script>
 		writeEnvInfo();
 		ps3chk();
+		setTimeout(initROP,4000,true);
+		autoclose();
 	</script>
 	</body>
 </html>
